// Vitest Snapshot v1

exports[`render correctly 1`] = `
"<PluginTabs >
<PluginTabsTab label=\\"Tab &quot;A&quot;\\">
<p>a</p>
</PluginTabsTab>
<PluginTabsTab label=\\"Tab &quot;B&quot;\\">
<p>b</p>
</PluginTabsTab>
</PluginTabs>
"
`;

exports[`render tab with nested ::: code correctly 1`] = `
"<PluginTabs >
<PluginTabsTab label=\\"Tab &quot;A&quot;\\">
<p>a</p>
<pre><code class=\\"language-js\\">const foo = ':::';
</code></pre>
</PluginTabsTab>
<PluginTabsTab label=\\"Tab &quot;B&quot;\\">
<p>b</p>
</PluginTabsTab>
</PluginTabs>
"
`;

exports[`render tab with nested block correctly 1`] = `
"<PluginTabs >
<PluginTabsTab label=\\"Tab &quot;A&quot;\\">
<p>a
:::tip
Tip
:::</p>
</PluginTabsTab>
<PluginTabsTab label=\\"Tab &quot;B&quot;\\">
<p>b</p>
</PluginTabsTab>
</PluginTabs>
"
`;
